tests/coverage/misc/fail/negative/truncation/006_call_args_eof.js
// Expected error: unterminated call argument list.
fn(1, 2
